--- a/curso_aulas/index.html
+++ b/curso_aulas/index.html
@@ -1,39 +1,43 @@
 <html>
 	<head>
 		<title>Titulo da Página</title>
-		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link rel="stylesheet" type="text/css" href="css/style2.css">
 		<meta charset="utf-8">
 	</head>
 	<body>
 		<h4>CURSO DE CSS 3 - DEVMEDIA</h4>
-		<ul class="elementoUl">  
-            <li><a href="1pseudo-elemento.html">Aula 01 - Pseudo Elementos</a></li>
-			<a href="2background_colors_DOM.html">Aula 02 - Background - DOM - Document Object Model</a>
-			<li><a href="3background_img.html">Aula 03 - Background IMG</a></li>
-			<li><a href="4fontes.html">Aula 04 - Fonts e Background</a></li>
-			<li><a href="5propriedades-text.html">Aula 05 - Propriedades Text</a></li>
-			<li><a href="6border.html">Aula 06 - Bordas</a></li>
-			<li><a href="7link1.html">Aula 07 - Links</a></li>
-			<li><a href="8margin_padding.html">Aula 08 - Margin Padding</a></li>
-			<li><a href="9list.html">Aula 09 - List</a></li>
-			<li><a href="10menu_links_listas.html">Aula 10 - Lista - Menu Links </a></li>
-			<li><a href="11tabelas.html">Aula 11 - Tabelas</a></li>
-			<li><a href="12formularios.html">Aula 12 - Formulários</a></li>
-			<li><a href="13css_avancados.html">Aula 13 - CSS 3 Avançado</a></li>
-			<li><a href="14divs.html">Aula 14 - Divs</a></li>
-			<li><a href="15position.html">Aula 15 - Position</a></li>
-			<li><a href="16calc_css.html">Aula 16 - Calc DIV</a></li>
-			<li><a href="17recorte_clip.html">Aula 17 - Recorte - CLIP</a></li>
-			<li><a href="18box_text_shadown.html">Aula 18 - Box, Text Shadow</a></li>
-			<li><a href="19border_radius.html">Aula 19 - Border Radius</a></li>
-			<li><a href="20herancas_classes.html">Aula 20 - Classes - Herança</a></li>
-			<li><a href="21animation.html">Aula 21 - Animation</a></li>
-			<li><a href="22animation2.html">Aula 22 - Animation 2</a></li>
-			<li><a href="23font_face.html">Aula 23 - Font Face</a></li>
-			<li><a href="24transform_2d.html">Aula 24 - Transform 2D</a></li>
-			<li><a href="25transform_3d.html">Aula 25 - Transform 3D</a></li>
-			<li><a href="26background_css3.html">Aula 26 - Background CSS3</a></li>
-			<li><a href="27media_queries.html">Aula 27 - Media Queries</a></li>
-        </ul>
+	
+		<div class="elementoUl">
+			<ul>  
+	            <li><div class="box_list"><a href="1pseudo-elemento.html">Aula 01 - Pseudo Elementos</a></div></li>
+				<li><div class="box_list"><a href="2background_colors_DOM.html">Aula 02 - Background - DOM - Document Object Model</a></div></li>
+				<li><div class="box_list"><a href="3background_img.html">Aula 03 - Background IMG</a></div></li>
+				<li><div class="box_list"><a href="4fontes.html">Aula 04 - Fonts e Background</a></div></li>
+				<li><div class="box_list"><a href="5propriedades-text.html">Aula 05 - Propriedades Text</a></div></li>
+				<li><div class="box_list"><a href="6border.html">Aula 06 - Bordas</a></div></li>
+				<li><div class="box_list"><a href="7link1.html">Aula 07 - Links</a></div></li>
+				<li><div class="box_list"><a href="8margin_padding.html">Aula 08 - Margin Padding</a></div></li>
+				<li><div class="box_list"><a href="9list.html">Aula 09 - List</a></div></li>
+				<li><div class="box_list"><a href="10menu_links_listas.html">Aula 10 - Lista - Menu Links </a></li>
+				<li><div class="box_list"><a href="11tabelas.html">Aula 11 - Tabelas</a></div></li>
+				<li><div class="box_list"><a href="12formularios.html">Aula 12 - Formulários</a></div></li>
+				<li><div class="box_list"><a href="13css_avancados.html">Aula 13 - CSS 3 Avançado</a></div></li>
+				<li><div class="box_list"><a href="14divs.html">Aula 14 - Divs</a></div></li>
+				<li><div class="box_list"><a href="15position.html">Aula 15 - Position</a></div></li>
+				<li><div class="box_list"><a href="16calc_css.html">Aula 16 - Calc DIV</a></div></li>
+				<li><div class="box_list"><a href="17recorte_clip.html">Aula 17 - Recorte - CLIP</a></div></li>
+				<li><div class="box_list"><a href="18box_text_shadown.html">Aula 18 - Box, Text Shadow</a></div></li>
+				<li><div class="box_list"><a href="19border_radius.html">Aula 19 - Border Radius</a></div></li>
+				<li><div class="box_list"><a href="20herancas_classes.html">Aula 20 - Classes - Herança</a></div></li>
+				<li><div class="box_list"><a href="21animation.html">Aula 21 - Animation</a></div></li>
+				<li><div class="box_list"><a href="22animation2.html">Aula 22 - Animation 2</a></div></li>
+				<li><div class="box_list"><a href="23font_face.html">Aula 23 - Font Face</a></div></li>
+				<li><div class="box_list"><a href="24transform_2d.html">Aula 24 - Transform 2D</a></div></li>
+				<li><div class="box_list"><a href="25transform_3d.html">Aula 25 - Transform 3D</a></div></li>
+				<li><div class="box_list"><a href="26background_css3.html">Aula 26 - Background CSS3</a></div></li>
+				<li><div class="box_list"><a href="27media_queries.html">Aula 27 - Media Queries</a></div></li>
+	        </ul>
+		</div>
+
 	</body>
 </html>
