Conclusão do Curso de CSS - Páginas Internas

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 				</div>
 				<div class="coluna_menu">
 					<div class="container_menu bordaArredondada" id="teste">
-						<a href="#">Página Inicial</a>
-						<a href="#">Quem Somos</a>
-						<a href="#">Nossos Produtos</a>
-						<a href="#">Localização</a>
-						<a href="#">Fale Conosco</a>	
+						<a href="index.html">Página Inicial</a>
+						<a href="interna.html">Quem Somos</a>
+						<a href="interna.html">Nossos Produtos</a>
+						<a href="localizacao.html">Localização</a>
+						<a href="interna.html">Fale Conosco</a>	
 					</div>
 				</div>
 			</div>
